# cmcli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: index.html
scripts/: build.sh
src/cmcli/: __init__.py  __main__.py  bilibili.py  cli.py  extract.py  search.py  tts.py
src/cmcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
