[project]
name = "cmcli"
version = "0.2.0"
description = "CMC's unified CLI: search (SearXNG), extract (url-tools), bilibili (opencli), tts (Qwen3-TTS)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "cangming", email = "cangming@example.com"}]
keywords = ["cli", "search", "bilibili", "searxng", "video-tools", "agent-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
cmcli = "cmcli.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "build>=1.0",
    "twine>=4.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "BLE"]
ignore = ["S101"]
